fixed all commentss