@@ -1,10 +1,7 @@
 package practice;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
@@ -13,63 +10,52 @@ import model.Person;
 
 public class StreamPractice {
     private static final String MIN_VALUE_NOT_FOUND = "Can't get min value from list: ";
-    private static final String AVERAGE_VALUE_NOT_FOUND = "Can't get average value from list: ";
+    private static final String MARK_COMMA = ",";
 
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
-                .map(split -> split.split(","))
+                .map(split -> split.split(MARK_COMMA))
                 .flatMap(Arrays::stream)
                 .map(Integer::parseInt)
                 .filter(num -> num % 2 == 0)
-                .sorted()
-                .findFirst()
+                .min(Integer::compareTo)
                 .orElseThrow(() -> new RuntimeException(MIN_VALUE_NOT_FOUND + numbers));
     }
 
     public Double getOddNumsAverage(List<Integer> numbers) {
-        List<Integer> filterListNumbers = IntStream.range(0, numbers.size())
-                .mapToObj(i -> i % 2 == 1 ? numbers.get(i) - 1 : numbers.get(i))
-                .toList();
-        return filterListNumbers.stream()
-                .filter(num -> num % 2 == 1)
-                .mapToDouble(Integer::doubleValue)
+        return IntStream.range(0, numbers.size())
+                .mapToObj(i -> (i % 2 == 1) ? numbers.get(i) - 1 : numbers.get(i))
+                .filter(n -> n % 2 != 0)
+                .mapToDouble(i -> i)
                 .average()
-                .orElseThrow(() -> new NoSuchElementException(AVERAGE_VALUE_NOT_FOUND + numbers));
+                .getAsDouble();
     }
 
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
-        Predicate<Person> predicate = person -> person.getAge() >= fromAge
-                && person.getAge() <= toAge
-                && person.getSex() == Person.Sex.MAN;
         return peopleList.stream()
-                .filter(predicate)
-                .toList();
+                .filter(person -> person.getSex() == Person.Sex.MAN
+                        && person.getAge() >= fromAge
+                        && person.getAge() <= toAge)
+                .collect(Collectors.toList());
     }
 
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        Predicate<Person> personPredicate = person -> {
-            if (person.getAge() >= fromAge) {
-                if (person.getSex() == Person.Sex.WOMAN && person.getAge() <= femaleToAge) {
-                    return true;
-                }
-                return person.getSex() == Person.Sex.MAN && person.getAge() <= maleToAge;
-            }
-            return false;
-        };
         return peopleList.stream()
-                .filter(personPredicate)
-                .toList();
+                .filter(person -> person.getAge() >= fromAge)
+                .filter(person -> person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() <= femaleToAge
+                        || person.getSex() == Person.Sex.MAN && person.getAge() <= maleToAge)
+                .collect(Collectors.toList());
     }
 
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
-
         return peopleList.stream()
-                .filter(women -> women.getSex() == Person.Sex.WOMAN && women.getAge() >= femaleAge)
-                .map(Person::getCats)
-                .flatMap(Collection::stream)
+                .filter(person -> person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() >= femaleAge)
+                .flatMap(person -> person.getCats().stream())
                 .map(Cat::getName)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<String> validateCandidates(List<Candidate> candidates) {
@@ -77,6 +63,6 @@ public class StreamPractice {
                 .filter(new CandidateValidator())
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
